{
  "version": 4,
  "terraform_version": "1.0.8",
  "serial": 231,
  "lineage": "e257db82-ce0c-4cad-953c-707d1a9fd007",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-019e88436ddb0e343",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-3-223-153-48.compute-1.amazonaws.com",
            "public_ip": "3.223.153.48",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "NAT_elastic_ip_a_vpc-07d8542a73315625d"
            },
            "tags_all": {
              "Name": "NAT_elastic_ip_a_vpc-07d8542a73315625d",
              "Owner": "Alina",
              "Purpose": "Whiskey"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-0193678612b34b971",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-52-205-229-226.compute-1.amazonaws.com",
            "public_ip": "52.205.229.226",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "NAT_elastic_ip_b_vpc-07d8542a73315625d"
            },
            "tags_all": {
              "Name": "NAT_elastic_ip_b_vpc-07d8542a73315625d",
              "Owner": "Alina",
              "Purpose": "Whiskey"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:819861602579:internet-gateway/igw-0fb057acad928d158",
            "id": "igw-0fb057acad928d158",
            "owner_id": "819861602579",
            "tags": {
              "Name": "IGW_vpc-07d8542a73315625d"
            },
            "tags_all": {
              "Name": "IGW_vpc-07d8542a73315625d",
              "Owner": "Alina",
              "Purpose": "Whiskey"
            },
            "vpc_id": "vpc-07d8542a73315625d"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-019e88436ddb0e343",
            "connectivity_type": "public",
            "id": "nat-064167b4769ed058d",
            "network_interface_id": "eni-05af79cd38f28f009",
            "private_ip": "10.0.4.94",
            "public_ip": "3.223.153.48",
            "subnet_id": "subnet-0e965910336b87e69",
            "tags": {
              "Name": "NAT_a_vpc-07d8542a73315625d"
            },
            "tags_all": {
              "Name": "NAT_a_vpc-07d8542a73315625d",
              "Owner": "Alina",
              "Purpose": "Whiskey"
            }
          },
          "dependencies": [
            "aws_eip.eip",
            "aws_subnet.public",
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0193678612b34b971",
            "connectivity_type": "public",
            "id": "nat-0016d60970ca33af0",
            "network_interface_id": "eni-0a89642b5faeaae58",
            "private_ip": "10.0.5.239",
            "public_ip": "52.205.229.226",
            "subnet_id": "subnet-0bac64b0a95f3da4a",
            "tags": {
              "Name": "NAT_b_vpc-07d8542a73315625d"
            },
            "tags_all": {
              "Name": "NAT_b_vpc-07d8542a73315625d",
              "Owner": "Alina",
              "Purpose": "Whiskey"
            }
          },
          "dependencies": [
            "aws_eip.eip",
            "aws_subnet.public",
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0ed7ea8a53d20f5971080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-064167b4769ed058d",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0ed7ea8a53d20f597",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.eip",
            "aws_nat_gateway.nat",
            "aws_route_table.route_tables",
            "aws_subnet.public",
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0faa9d2ae39b8b4e31080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0016d60970ca33af0",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0faa9d2ae39b8b4e3",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.eip",
            "aws_nat_gateway.nat",
            "aws_route_table.route_tables",
            "aws_subnet.public",
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0fb057acad928d158",
            "id": "r-rtb-09d658e8a3f522fa81080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-09d658e8a3f522fa8",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.route_tables",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route_tables",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:819861602579:route-table/rtb-09d658e8a3f522fa8",
            "id": "rtb-09d658e8a3f522fa8",
            "owner_id": "819861602579",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "public_RTB_vpc-07d8542a73315625d"
            },
            "tags_all": {
              "Name": "public_RTB_vpc-07d8542a73315625d",
              "Owner": "Alina",
              "Purpose": "Whiskey"
            },
            "timeouts": null,
            "vpc_id": "vpc-07d8542a73315625d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:819861602579:route-table/rtb-0ed7ea8a53d20f597",
            "id": "rtb-0ed7ea8a53d20f597",
            "owner_id": "819861602579",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "private-a_RTB_vpc-07d8542a73315625d"
            },
            "tags_all": {
              "Name": "private-a_RTB_vpc-07d8542a73315625d",
              "Owner": "Alina",
              "Purpose": "Whiskey"
            },
            "timeouts": null,
            "vpc_id": "vpc-07d8542a73315625d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:819861602579:route-table/rtb-0faa9d2ae39b8b4e3",
            "id": "rtb-0faa9d2ae39b8b4e3",
            "owner_id": "819861602579",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "private-b_RTB_vpc-07d8542a73315625d"
            },
            "tags_all": {
              "Name": "private-b_RTB_vpc-07d8542a73315625d",
              "Owner": "Alina",
              "Purpose": "Whiskey"
            },
            "timeouts": null,
            "vpc_id": "vpc-07d8542a73315625d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0525c179ae720f413",
            "route_table_id": "rtb-0ed7ea8a53d20f597",
            "subnet_id": "subnet-038004094cfa6a32d"
          },
          "dependencies": [
            "aws_route_table.route_tables",
            "aws_subnet.private",
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-012dd7314486a7d07",
            "route_table_id": "rtb-0faa9d2ae39b8b4e3",
            "subnet_id": "subnet-0d52a810b6628624d"
          },
          "dependencies": [
            "aws_route_table.route_tables",
            "aws_subnet.private",
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a211718cc0290c2f",
            "route_table_id": "rtb-09d658e8a3f522fa8",
            "subnet_id": "subnet-0e965910336b87e69"
          },
          "dependencies": [
            "aws_route_table.route_tables",
            "aws_subnet.public",
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0546e7cf92332f0f9",
            "route_table_id": "rtb-09d658e8a3f522fa8",
            "subnet_id": "subnet-0bac64b0a95f3da4a"
          },
          "dependencies": [
            "aws_route_table.route_tables",
            "aws_subnet.public",
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:819861602579:subnet/subnet-038004094cfa6a32d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-038004094cfa6a32d",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "819861602579",
            "tags": {
              "Name": "Private_subnet_a_vpc-07d8542a73315625d",
              "Network": "Private"
            },
            "tags_all": {
              "Name": "Private_subnet_a_vpc-07d8542a73315625d",
              "Network": "Private",
              "Owner": "Alina",
              "Purpose": "Whiskey"
            },
            "vpc_id": "vpc-07d8542a73315625d"
          },
          "dependencies": [
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:819861602579:subnet/subnet-0d52a810b6628624d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.3.0/24",
            "id": "subnet-0d52a810b6628624d",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "819861602579",
            "tags": {
              "Name": "Private_subnet_b_vpc-07d8542a73315625d",
              "Network": "Private"
            },
            "tags_all": {
              "Name": "Private_subnet_b_vpc-07d8542a73315625d",
              "Network": "Private",
              "Owner": "Alina",
              "Purpose": "Whiskey"
            },
            "vpc_id": "vpc-07d8542a73315625d"
          },
          "dependencies": [
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:819861602579:subnet/subnet-0e965910336b87e69",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.4.0/24",
            "id": "subnet-0e965910336b87e69",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "819861602579",
            "tags": {
              "Name": "Public_subnet_a_vpc-07d8542a73315625d"
            },
            "tags_all": {
              "Name": "Public_subnet_a_vpc-07d8542a73315625d",
              "Owner": "Alina",
              "Purpose": "Whiskey"
            },
            "vpc_id": "vpc-07d8542a73315625d"
          },
          "dependencies": [
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:819861602579:subnet/subnet-0bac64b0a95f3da4a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.5.0/24",
            "id": "subnet-0bac64b0a95f3da4a",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "819861602579",
            "tags": {
              "Name": "Public_subnet_b_vpc-07d8542a73315625d"
            },
            "tags_all": {
              "Name": "Public_subnet_b_vpc-07d8542a73315625d",
              "Owner": "Alina",
              "Purpose": "Whiskey"
            },
            "vpc_id": "vpc-07d8542a73315625d"
          },
          "dependencies": [
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:819861602579:vpc/vpc-07d8542a73315625d",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-00896f7f8f8ad3f5c",
            "default_route_table_id": "rtb-0bce541c32147621a",
            "default_security_group_id": "sg-01a3075e39c1155ae",
            "dhcp_options_id": "dopt-0f5ce1ef3ad924b66",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-07d8542a73315625d",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0bce541c32147621a",
            "owner_id": "819861602579",
            "tags": {
              "Name": "My_VPC"
            },
            "tags_all": {
              "Name": "My_VPC",
              "Owner": "Alina",
              "Purpose": "Whiskey"
            }
          }
        }
      ]
    }
  ]
}